@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2012, 2020, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2012, 2021, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -40,13 +40,14 @@ import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
+import java.util.Optional;
 import java.util.Set;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 import static jdk.jpackage.internal.OverridableResource.createResource;
-import static jdk.jpackage.internal.StandardBundlerParam.APP_NAME;
+import static jdk.jpackage.internal.StandardBundlerParam.ABOUT_URL;
 import static jdk.jpackage.internal.StandardBundlerParam.INSTALLER_NAME;
 import static jdk.jpackage.internal.StandardBundlerParam.VERSION;
 import static jdk.jpackage.internal.StandardBundlerParam.RELEASE;
@@ -91,11 +92,11 @@ public class LinuxDebBundler extends LinuxPackageBundler {
                 return s;
             });
 
-    private final static String TOOL_DPKG_DEB = "dpkg-deb";
-    private final static String TOOL_DPKG = "dpkg";
-    private final static String TOOL_FAKEROOT = "fakeroot";
+    private static final String TOOL_DPKG_DEB = "dpkg-deb";
+    private static final String TOOL_DPKG = "dpkg";
+    private static final String TOOL_FAKEROOT = "fakeroot";
 
-    private final static String DEB_ARCH;
+    private static final String DEB_ARCH;
     static {
         String debArch;
         try {
@@ -173,7 +174,7 @@ public class LinuxDebBundler extends LinuxPackageBundler {
     protected List<ToolValidator> getToolValidators(
             Map<String, ? super Object> params) {
         return Stream.of(TOOL_DPKG_DEB, TOOL_DPKG, TOOL_FAKEROOT).map(
-                ToolValidator::new).collect(Collectors.toList());
+                ToolValidator::new).toList();
     }
 
     @Override
@@ -412,7 +413,10 @@ public class LinuxDebBundler extends LinuxPackageBundler {
                 configDir.resolve("postrm"),
                 "resource.deb-postrm-script").setExecutable());
 
-        if (!StandardBundlerParam.isRuntimeInstaller(params)) {
+        final String installDir = LINUX_INSTALL_DIR.fetchFrom(params);
+
+        if (!StandardBundlerParam.isRuntimeInstaller(params)
+                || (isInstallDirInUsrTree(installDir) || installDir.startsWith("/usr/"))) {
             debianFiles.add(new DebianFile(
                     getConfig_CopyrightFile(params),
                     "resource.copyright-file"));
@@ -435,6 +439,9 @@ public class LinuxDebBundler extends LinuxPackageBundler {
         data.put("APPLICATION_ARCH", DEB_ARCH);
         data.put("APPLICATION_INSTALLED_SIZE", Long.toString(
                 createMetaPackage(params).sourceApplicationLayout().sizeInBytes() >> 10));
+        data.put("APPLICATION_HOMEPAGE", Optional.ofNullable(
+                ABOUT_URL.fetchFrom(params)).map(value -> "Homepage: " + value).orElse(
+                ""));
 
         return data;
     }
