@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2018, 2019, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2018, 2021, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -45,7 +45,7 @@ public class MirrorWithReferenceFieldsApp {
 
     public MirrorWithReferenceFieldsApp() {
         non_archived_field_1 = new Object();
-        non_archived_field_2 = new Integer(1);
+        non_archived_field_2 = Integer.valueOf(1);
     }
 
     public static void main(String args[]) throws Exception {
