@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2001, 2018, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2001, 2021, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -79,7 +79,7 @@ class decltype003aOverridenClass extends decltype003aMainClass {
     decltype003aClass     X0, X1[]={X0}, X2[][]={X1};
     Object    O0, O1[]={O0}, O2[][]={O1};
 
-    final     Long LF0 = new Long(1), LF1[]={LF0}, LF2[][]={LF1};
+    final     Long LF0 = Long.valueOf(1), LF1[]={LF0}, LF2[][]={LF1};
     private   Long LP0,               LP1[]={LP0}, LP2[][]={LP1};
     public    Long LU0,               LU1[]={LU0}, LU2[][]={LU1};
     protected Long LR0,               LR1[]={LR0}, LR2[][]={LR1};
@@ -119,7 +119,7 @@ class decltype003aMainClass {
     decltype003aClass     X0, X1[]={X0}, X2[][]={X1};
     Object    O0, O1[]={O0}, O2[][]={O1};
 
-    final     Long LF0 = new Long(1), LF1[]={LF0}, LF2[][]={LF1};
+    final     Long LF0 = Long.valueOf(1), LF1[]={LF0}, LF2[][]={LF1};
     private   Long LP0,               LP1[]={LP0}, LP2[][]={LP1};
     public    Long LU0,               LU1[]={LU0}, LU2[][]={LU1};
     protected Long LR0,               LR1[]={LR0}, LR2[][]={LR1};
@@ -159,9 +159,9 @@ interface decltype003aOverridenInter extends decltype003aMainInter {
     decltype003aClass     X0 = new decltype003aClass(),  X1[]={X0}, X2[][]={X1};
     Object    O0 = new Object(), O1[]={O0}, O2[][]={O1};
 
-    final     Long LF0 = new Long(1), LF1[]={LF0}, LF2[][]={LF1};
-    public    Long LU0 = new Long(1), LU1[]={LU0}, LU2[][]={LU1};
-    static    Long L0S = new Long(1), L1S[]={L0S}, L2S[][]={L1S};
+    final     Long LF0 = Long.valueOf(1), LF1[]={LF0}, LF2[][]={LF1};
+    public    Long LU0 = Long.valueOf(1), LU1[]={LU0}, LU2[][]={LU1};
+    static    Long L0S = Long.valueOf(1), L1S[]={L0S}, L2S[][]={L1S};
 
     decltype003aInter     E0 = null, E1[]={E0}, E2[][]={E1};
 
@@ -187,9 +187,9 @@ interface decltype003aMainInter {
     decltype003aClass     X0 = new decltype003aClass(),  X1[]={X0}, X2[][]={X1};
     Object    O0 = new Object(), O1[]={O0}, O2[][]={O1};
 
-    final     Long LF0 = new Long(1), LF1[]={LF0}, LF2[][]={LF1};
-    public    Long LU0 = new Long(1), LU1[]={LU0}, LU2[][]={LU1};
-    static    Long L0S = new Long(1), L1S[]={L0S}, L2S[][]={L1S};
+    final     Long LF0 = Long.valueOf(1), LF1[]={LF0}, LF2[][]={LF1};
+    public    Long LU0 = Long.valueOf(1), LU1[]={LU0}, LU2[][]={LU1};
+    static    Long L0S = Long.valueOf(1), L1S[]={L0S}, L2S[][]={L1S};
 
     decltype003aInter     E0 = null, E1[]={E0}, E2[][]={E1};
 
